# Yandex-tasks

./: .gitignore  CMakeLists.txt  README.md  condaFile  test.cpp
InternSpringAutmn2023BackEnd/: A.cpp  B.cpp  D.cpp  readme.md
practikum2022/: readme.md  sprint1_1.cpp  sprint_1_10.cpp  sprint_1_11.cpp  sprint_1_1_2.cpp  sprint_1_2.cpp  sprint_1_4.cpp  sprint_1_5.cpp  sprint_1_7.cpp  sprint_1_8.cpp  sprint_1_L.cpp  sprint_2_1.cpp  sprint_2_10.cpp  sprint_2_11.cpp  sprint_2_2.cpp  sprint_2_3.cpp  sprint_2_4.cpp  sprint_2_6.cpp  sprint_2_7.cpp  sprint_2_8.cpp  sprint_3_1.cpp  sprint_3_B_2.cpp  sprint_3_C.cpp  sprint_3_D.cpp  sprint_3_E.cpp  sprint_3_G.cpp  sprint_3_H.cpp  sprint_3_I.cpp  sprint_3_J.cpp  sprint_3_L.cpp  sprint_3_M.cpp  sprint_3_b.cpp  sprint_4_B.cpp  sprint_4_B_2.cpp  sprint_4_D.cpp  sprint_5_A.cpp  sprint_5_B.cpp  sprint_5_D.cpp  sprint_5_F.cpp  sprint_B_2.cpp
yandex30/: readme.md
yandex30/divisionA/: a1.cpp  a10.cpp  a11.cpp  a12.cpp  a13.py  a14.cpp  a15.cpp  a16.cpp  a17.cpp  a18.cpp  a19.cpp  a2.cpp  a20.cpp  a21.cpp  a22.cpp  a23.cpp  a24.cpp  a25.cpp  a26.cpp  a26.py  a27.cpp  a28.cpp  a29.cpp  a3.cpp  a30.cpp  a4.cpp  a5.cpp  a6.cpp  a7.cpp  a8.cpp  a9.cpp  exprtk.hpp  readme.md
yandex30/divisionB/: B1.cpp
