cmake_minimum_required(VERSION 3.20)
project(russiantests)
add_executable(backend2023_a InternSpringAutmn2023BackEnd/A.cpp)
set_target_properties(backend2023_a PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(backend2023_b InternSpringAutmn2023BackEnd/B.cpp)
set_target_properties(backend2023_b PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )

add_executable(backend2023_d InternSpringAutmn2023BackEnd/D.cpp)
set_target_properties(backend2023_d PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )

add_executable(divisionA_a1 yandex30/divisionA/a1.cpp )
set_target_properties(divisionA_a1 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a2  yandex30/divisionA/a2.cpp)
set_target_properties(divisionA_a2 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a3  yandex30/divisionA/a3.cpp)
set_target_properties(divisionA_a3 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a4  yandex30/divisionA/a4.cpp)
set_target_properties(divisionA_a4 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a5  yandex30/divisionA/a5.cpp)
set_target_properties(divisionA_a5 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a6  yandex30/divisionA/a6.cpp)
set_target_properties(divisionA_a6 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a7  yandex30/divisionA/a7.cpp)
set_target_properties(divisionA_a7 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a8  yandex30/divisionA/a8.cpp)
set_target_properties(divisionA_a8 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a9  yandex30/divisionA/a9.cpp)
set_target_properties(divisionA_a9 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a10  yandex30/divisionA/a10.cpp)
set_target_properties(divisionA_a10 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a11  yandex30/divisionA/a11.cpp)
set_target_properties(divisionA_a11 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a12  yandex30/divisionA/a12.cpp yandex30/divisionA/exprtk.hpp)
set_target_properties(divisionA_a12 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a14  yandex30/divisionA/a14.cpp )
set_target_properties(divisionA_a14 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )