cmake_minimum_required(VERSION 3.20)
project(russiantests)
add_executable(backend2023_a InternSpringAutmn2023BackEnd/A.cpp)
set_target_properties(backend2023_a PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(backend2023_b InternSpringAutmn2023BackEnd/B.cpp)
set_target_properties(backend2023_b PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )

add_executable(backend2023_d InternSpringAutmn2023BackEnd/D.cpp)
set_target_properties(backend2023_d PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )

add_executable(divisionA_a1 yandex30/divisionA/a1.cpp )
set_target_properties(divisionA_a1 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a2  yandex30/divisionA/a2.cpp)
set_target_properties(divisionA_a2 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a3  yandex30/divisionA/a3.cpp)
set_target_properties(divisionA_a3 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a4  yandex30/divisionA/a4.cpp)
set_target_properties(divisionA_a4 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a5  yandex30/divisionA/a5.cpp)
set_target_properties(divisionA_a5 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a6  yandex30/divisionA/a6.cpp)
set_target_properties(divisionA_a6 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a7  yandex30/divisionA/a7.cpp)
set_target_properties(divisionA_a7 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a8  yandex30/divisionA/a8.cpp)
set_target_properties(divisionA_a8 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a9  yandex30/divisionA/a9.cpp)
set_target_properties(divisionA_a9 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a10  yandex30/divisionA/a10.cpp)
set_target_properties(divisionA_a10 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a11  yandex30/divisionA/a11.cpp)
set_target_properties(divisionA_a11 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a12  yandex30/divisionA/a12.cpp yandex30/divisionA/exprtk.hpp)
set_target_properties(divisionA_a12 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a14  yandex30/divisionA/a14.cpp )
set_target_properties(divisionA_a14 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a15  yandex30/divisionA/a15.cpp )
set_target_properties(divisionA_a15 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a16  yandex30/divisionA/a16.cpp )
set_target_properties(divisionA_a16 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a17  yandex30/divisionA/a17.cpp )
set_target_properties(divisionA_a17 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a18  yandex30/divisionA/a18.cpp )
set_target_properties(divisionA_a18 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a19  yandex30/divisionA/a19.cpp )
set_target_properties(divisionA_a19 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a20  yandex30/divisionA/a20.cpp )
set_target_properties(divisionA_a20 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a21  yandex30/divisionA/a21.cpp )
set_target_properties(divisionA_a21 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a22  yandex30/divisionA/a22.cpp )
set_target_properties(divisionA_a22 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a23  yandex30/divisionA/a23.cpp )
set_target_properties(divisionA_a23 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a24  yandex30/divisionA/a24.cpp )
set_target_properties(divisionA_a24 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a25  yandex30/divisionA/a25.cpp )
set_target_properties(divisionA_a25 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a26  yandex30/divisionA/a26.cpp )
set_target_properties(divisionA_a26 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionB_b1  yandex30/divisionB/B1.cpp )
set_target_properties(divisionB_b1 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a27  yandex30/divisionA/a27.cpp )
set_target_properties(divisionA_a27 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a28  yandex30/divisionA/a28.cpp )
set_target_properties(divisionA_a28 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a29  yandex30/divisionA/a29.cpp )
set_target_properties(divisionA_a29 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )
add_executable(divisionA_a30  yandex30/divisionA/a30.cpp )
set_target_properties(divisionA_a30 PROPERTIES
        CXX_STANDARD 20
        CXX_STANDARD_REQUIRED ON
        )